--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,15 +1,16 @@
 .header {
-    display: flex;
-    flex-direction: column;
-    max-width: 1280px;
-    min-width: 320px;
-    margin: 0 200px 40px 200px;
-    border-bottom: 1px solid rgb(84, 84, 84, 0.7);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  max-width: 1280px;
+  min-width: 320px;
+  margin: 0 200px 60px 200px;
+  border-bottom: 1px solid rgb(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 1060px) {
-    .header {
-        max-width: 100%;
-        margin: 0 0 40px 0;
-    }
+  .header {
+    max-width: 100%;
+    margin: 0 0 40px 0;
+  }
 }
