--- a/src/blocks/header/__link-button/header__link-button.css
+++ b/src/blocks/header/__link-button/header__link-button.css
@@ -1,7 +1,5 @@
 .header__link-button {
-  position: absolute;
-  right: 0;
-  margin: 51px 0 41px 0;
+  margin: 51px 0 41px 24px;
   padding: 0;
   text-decoration: none;
   font-family: "Inter", "Arial", "Helvetica", sans-serif;
