--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,10 +1,10 @@
 .header {
   display: flex;
   flex-direction: row;
-  position: relative;
+  justify-content: space-between;
   max-width: 1280px;
   min-width: 320px;
-  margin: 0 200px 40px 200px;
+  margin: 0 200px 60px 200px;
   border-bottom: 1px solid rgb(84, 84, 84, 0.7);
 }
 
