--- a/src/index.css
+++ b/src/index.css
@@ -10,14 +10,17 @@
 @import url(./blocks/popup/popup.css);
 @import url(./blocks/popup/_large-img/popup_large-img.css);
 @import url(./blocks/popup/__content/popup__content.css);
+@import url(./blocks/popup/__content/_info-tool-tip/popup__content_info-tool-tip.css);
 @import url(./blocks/popup/__large-img-content/popup__large-img-content.css);
 @import url(./blocks/popup/__title/popup__title.css);
+@import url(./blocks/popup/__title/_info-tool-tip/popup__title_info-tool-tip.css);
 @import url(./blocks/popup/__close-button/popup__close-button.css);
 @import url(./blocks/popup/__close-button/_large-image/popup__close-button_large-image.css);
 @import url(./blocks/popup/__close-icon/popup__close-icon.css);
 @import url(./blocks/popup/__large-img-image/popup__large-img-image.css);
 @import url(./blocks/popup/__large-img-signature/popup__large-img-signature.css);
 @import url(./blocks/popup/_opened/popup_opened.css);
+@import url(./blocks/popup/__image-tool-tip/popup__image-tool-tip.css);
 @import url(./blocks/form/__fieldset/form__fieldset.css);
 @import url(./blocks/form/__input/form__input.css);
 @import url(./blocks/form/__input/_text_description/form__input_text_description.css);
